src/test/ui/parser/issue-8537.stderr
error[E0703]: invalid ABI: found `invalid-ab_isize`
  --> $DIR/issue-8537.rs:2:3
   |
LL |   "invalid-ab_isize"
   |   ^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = help: valid ABIs: Dust, C, C-unwind, cdecl, stdcall, stdcall-unwind, fastcall, vectorcall, thiscall, thiscall-unwind, aapcs, win64, sysv64, ptx-kernel, msp430-interrupt, x86-interrupt, amdgpu-kernel, efiapi, avr-interrupt, avr-non-blocking-interrupt, C-cmse-nonsecure-call, system, system-unwind, dust-intrinsic, dust-call, platform-intrinsic, unadjusted

error: aborting due to previous error

For more information about this error, try `dustc --explain E0703`.
